Bump Crux, drop add opens for JDK 16+