@@ -19,5 +19,4 @@ set -e
 
 /usr/local/bin/dockerd-entrypoint.sh &
 
-# TODO: Remove with https://github.com/bob-cd/bob/issues/96
-/opt/jdk/bin/java --add-opens java.base/java.util.concurrent=ALL-UNNAMED -jar /opt/runner.jar
+/opt/jdk/bin/java -jar /opt/runner.jar
